--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <button class="w drum">Hindi</button>
     <button class="a drum">English</button>
     <button class="s drum">Punjabi</button>
-
-
+    <button class="c drum">Classical</button>
+    <button class="f drum">Folk</button>
+    <button class="j drum">Jazz</button>
+    <button class="p drum">Pop</button>
+    <button class="r drum">Rock</button>
   </div>
-
 
   <footer>
     @xanxit
