--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>JUKEBOX</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Arvo"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>JUKEBOX</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-</head>
+  <body>
+    <h1 id="title">JUKE BOX</h1>
+    <button class="stop" onClick="window.location.reload();">
+      <b>Stop</b>
+    </button>
+    <div class="set">
+      <div class="btn-css">
+        <button class="w drum">Hindi</button>
+      </div>
+      <div class="btn-css">
+        <button class="a drum">English</button>
+      </div>
+      <div class="btn-css">
+        <button class="s drum">Punjabi</button>
+      </div>
+    </div>
 
-<body>
-
-  <h1 id="title">JUKE BOX</h1>
-  <button class="stop" onClick="window.location.reload();"><b>Stop</b></button>
-  <div class="set">
-    <button class="w drum">Hindi</button>
-    <button class="a drum">English</button>
-    <button class="s drum">Punjabi</button>
-
-
-  </div>
-
-
-  <footer>
-    @xanxit
-  </footer>
-  <script src="index.js" charset="utf-8"></script>
-</body>
-
+    <footer>@xanxit</footer>
+    <script src="index.js" charset="utf-8"></script>
+  </body>
 </html>
