Changed background and some CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>JUKEBOX</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="images/hindi.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Arvo"
       rel="stylesheet"
@@ -16,13 +17,13 @@
       <b>Stop</b>
     </button>
     <div class="set">
-      <div class="btn-css">
+      <div class="btn">
         <button class="w drum">Hindi</button>
       </div>
-      <div class="btn-css">
+      <div class="btn">
         <button class="a drum">English</button>
       </div>
-      <div class="btn-css">
+      <div class="btn">
         <button class="s drum">Punjabi</button>
       </div>
     </div>
