Add New Categories

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
       <div class="btn">
         <button class="s drum">Punjabi</button>
       </div>
+      <div class="btn">
+        <button class="c drum">Classic</button>
+      </div>
+    </div>
+    <div class="set">
+      <div class="btn">
+        <button class="f drum">Folk</button>
+      </div>
+      <div class="btn">
+        <button class="j drum">Jazz</button>
+      </div>
+      <div class="btn">
+        <button class="p drum">Pop</button>
+      </div>
+      <div class="btn">
+        <button class="r drum">Rock</button>
+      </div>
     </div>
 
     <footer>@xanxit</footer>
