--- a/index.html
+++ b/index.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>JUKEBOX</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="images/hindi.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Arvo"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <h1 id="title">JUKE BOX</h1>
-    <button class="stop" onClick="window.location.reload();">
-      <b>Stop</b>
-    </button>
-    <div class="set">
-      <div class="btn">
-        <button class="w drum">Hindi</button>
-      </div>
-      <div class="btn">
-        <button class="a drum">English</button>
-      </div>
-      <div class="btn">
-        <button class="s drum">Punjabi</button>
-      </div>
-      <div class="btn">
-        <button class="c drum">Classic</button>
-      </div>
-    </div>
-    <div class="set">
-      <div class="btn">
-        <button class="f drum">Folk</button>
-      </div>
-      <div class="btn">
-        <button class="j drum">Jazz</button>
-      </div>
-      <div class="btn">
-        <button class="p drum">Pop</button>
-      </div>
-      <div class="btn">
-        <button class="r drum">Rock</button>
-      </div>
-    </div>
+<head>
+  <meta charset="utf-8" />
+  <title>JUKEBOX</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="images/hindi.png" />
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" />
+</head>
 
-    <footer>@xanxit</footer>
-    <script src="index.js" charset="utf-8"></script>
-  </body>
+<body>
+  <h1 id="title">JUKE BOX</h1>
+  <button class="stop" onClick="window.location.reload();">
+    <b>Stop</b>
+  </button>
+  <!-- first row -->
+  <div class="set">
+    <div class="btn">
+      <button class="w drum">Hindi</button>
+    </div>
+    <div class="btn">
+      <button class="a drum">English</button>
+    </div>
+    <div class="btn">
+      <button class="s drum">Punjabi</button>
+    </div>
+    <div class="btn">
+      <button class="i drum">Italian</button>
+    </div>
+  </div>
+  <!-- second row -->
+  <div class="set">
+    <div class="btn">
+      <button class="c drum">Classic</button>
+    </div>
+    <div class="btn">
+      <button class="f drum">Folk</button>
+    </div>
+    <div class="btn">
+      <button class="j drum">Jazz</button>
+    </div>
+    <div class="btn">
+      <button class="p drum">Pop</button>
+    </div>
+  </div>
+  <div class="set">
+    <div class="btn">
+      <button class="r drum">Rock</button>
+    </div>
+    <div class="btn">
+      <button class="rp drum">Rap</button>
+    </div>
+    <div class="btn">
+      <button class="in drum">Indie</button>
+    </div>
+    <div class="btn">
+      <button class="d drum">Dubstep</button>
+    </div>
+  </div>
+  <footer>@xanxit</footer>
+  <script src="index.js" charset="utf-8"></script>
+</body>
+
 </html>
